--- a/containers/app/blog/templates/blog/base.html
+++ b/containers/app/blog/templates/blog/base.html
@@ -1,24 +1,1 @@
-{% load staticfiles %}
-<html>
-  <head>
-    <title>Django Girls</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="{% static "css/blog.css" %}">
-  </head>
-  <body>
-    <div class="page-header">
-      {% if user.is_authenticated %}
-      <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-      {% endif %}
-      <h3><a href="/">Django Sample app to demo Cont Integration  / Cont Deplo. Current pod name :  </a> &mdash; {{ pod_name }}</h3>
-    </div>
-    <div class="content container">
-      <div class="row">
-	<div class="col-md-8">
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+{% load staticfiles %} <html>   <head>     <title>Django Girls</title>     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">     <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">     <link rel="stylesheet" href="{% static "css/blog.css" %}">   </head>   <body>     <div class="page-header">       {% if user.is_authenticated %}       <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>       {% endif %}       <h1><a href="/">Hello world</a> &mdash; {{ pod_name }}</h1>     </div>     <div class="content container">       <div class="row"> 	<div class="col-md-8"> 	  {% block content %}           {% endblock %}         </div>       </div>     </div>   </body> </html>
